--- a/CSS/Index/indexNew.css
+++ b/CSS/Index/indexNew.css
@@ -5066,15 +5066,16 @@ md-progress-circular svg path {
 .mainBody .mainPage .fullFooter .content .top .left {
   position: relative;
   left: 0;
-  width: 65%;
+  width: 55%;
   height: 100%;
   top: 0; }
 
 .mainBody .mainPage .fullFooter .content .top .left .list {
   position: relative;
   left: 20px;
-  top: 20px;
-  height: calc(100% - 40px);
+  top: 0;
+  margin: auto;
+  height: calc(70% - 40px);
   width: 35%; }
 
 .mainBody .mainPage .fullFooter .content .top .left .bord {
@@ -5084,7 +5085,7 @@ md-progress-circular svg path {
   position: relative;
   left: 0;
   margin-left: 10px;
-  height: calc(100% / 6);
+  height: calc(100% / 3);
   text-align: left;
   cursor: default; }
 
