--- a/Templates/index_Update.html
+++ b/Templates/index_Update.html
@@ -1,7 +1,7 @@
 <div class="indexMain" ng-cloak>
     <div class="body">
         <div class="imgHead">
-            <img src="Images/Intellicargo Logo small.png" class="headIcon" />
+            <img src="Images/logo.png" class="headIcon" />
         </div>
         <div class="selections" layout="row">
             <div class="opt" ng-click="" layout="column">
