--- a/Templates/indexMainMobile.html
+++ b/Templates/indexMainMobile.html
@@ -1,14 +1,11 @@
 <div class="indexMainMobile" ng-cloak>
     <div class="body">
-        <div class="imgHead">
-            <img src="Images/logo.png" class="headIcon" />
-        </div>
         <div class="selections" layout="row">
             <div class="opt" ng-click="toLogistics()" layout="column">
                 <div class="txtCont" layout="row">
-                    <font class="txtOne">Welcome to</font><font class="txt">Logistics</font>
+                    <font class="txtOne">Welcome to</font><font class="txt">My Online CV</font>
                 </div>
-                <md-icon md-svg-src="Images/SVG/international-delivery.svg" class="ico" ng-click=""></md-icon>
+                <img src="Images/logo.png" class="" style="margin:auto;width:auto;height:auto;max-width:400px;" />
                 <button class="continue">Continue</button>
             </div>
         </div>
